clothing/static/clothing/styles.css
/** universal styles **/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 18px;
}


a {
    text-decoration: none;
    color: #000;
}

input{
    padding: 8px;
    border: .5px solid #ccc;
    outline: none;
}


input[type='text']{
    font-size: 16px;
}
/** end of universal styles **/


/** navbar styles **/
nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: white;
}

nav .top_bar_nav{
    padding: 8px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

nav .bottom_bar_nav {
    background: #000;
    padding: 8px 10px;
    text-align: center;
    display: flex;
    justify-content: space-around;
}

nav .bottom_bar_nav a {
    color: #ff94db;
    font-size: 16px;
}

@media screen and (min-width: 970px){
    nav .bottom_bar_nav,
    nav .top_bar_nav     {
        width: 920px;
        margin: 0 auto;
    }
}


nav .brand_name {
    color: #ff06ac;
    font-size: 24px;
}


nav input[type='submit']{
    font-size: 18px;
}


nav .cloth_search_form input[type='text']{
    width: 40px;
    border-radius: 50px;
    transition: all .5s ease-in;
}


@media screen and (min-width: 670px){
    nav .cloth_search_form input[type='text']{
        width: 270px;
        border: 1px solid #ccc;
        border-radius: 0px;
    }
}


nav .cloth_search_form input[type='submit']{
    background: #c42dff;
    color: #fff;
    font-size: 16px;
    font-weight: 600;
    border-radius: 4px;
    border: 1px solid #ccc;
}

/** end of navbar **/


/** main hero styles **/

main {
    padding: 120px 18px;
}

@media screen and (min-width: 970px){
    main {
        width: 920px;
        margin: 0 auto;
    }
}


main .hero {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-around;
}

main .hero div {
    margin-top: 18px;
}

main .hero div img {
    width: 250px;
    height: 250px;
}

@media screen and (min-width: 670px){
    main .hero {
        flex-direction: row;
    }

    main .hero h1 {
        font-size: 38px;
    }

    main .hero div img {
        width: 450px;
        height: 450px;
    }
}
/** end of main hero styles **/


/** main trending styles **/
main .trending {
    margin-top: 80px;
}

main .trending .title {
    text-align: center;
    color: #c42dff;
}

main .trending .content {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: row;
}

main .trending .content .img_wrap img {
    width: 180px;
    height: 180px;
}


@media screen and (min-width: 670px){
    main .trending .content .img_wrap img {
        width: 420px;
        height: 420px;
    }
}


main .trending .content .wrap {
    text-align: center;
}

@media screen and (min-width: 670px){
    main .trending .content .wrap  h3 {
        font-size: 34px;
    }
}
/** end of main trending styles **/


/** main quick_list styles **/

main .quick_list .cloth-list {
    padding: 70px 0;
}

main .quick_list .view_all_wrap {
    text-align: center;
}

main .quick_list #view_all {
    padding: 8px;
    text-align: center;
    border: 1px solid #c42dff;
    background: transparent;
    transition: .4s ease-in;
}

main .quick_list #view_all:hover {
    background: #c42dff;
}
/** end of main quick_list styles **/


/** main blog_latest styles **/

main .blog_latest {
    padding-top: 60px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-around;
}

@media screen and (min-width: 670px){
    main .blog_latest {
        flex-direction: row;
    }
}

main .blog_latest article {
    margin: 24px 0;
    width: 320px;
}

main .blog_latest article .title {
    margin-bottom: 10px;
}

main .blog_latest article p {
    margin-bottom: 10px;
}

main .blog_latest article a {
    color: #b00978;
    font-weight: 550;
}

/** end of main blog_latest styles **/


.wrapper h2 {
    text-align: center;
    font-size: 34px;
    color: #b00978;
}


/** cloth listing **/
.cloth-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
    grid-gap: 5px;
}


.cloth-list .cloth {
    border: 1.3px solid #ccc;
    padding: 8px;
    text-align: center;
    margin: 8px 18px;
}

.cloth-list .cloth img {
    width: 100%;
}

.cloth-list .cloth h4 {
    text-transform: uppercase;
    letter-spacing: 10px;
    color: rgb(175, 5, 118);
}


.cloth-list .add_to_cart_wrap {
    margin: 20px 0;
}

.cloth-list .add_to_cart_wrap a {
    font-size: 18px;
    border: 1px solid #ff06ac;
    padding: 8px;
    color: #ffffff;
    background-color: #ff06ac;
    cursor: pointer;

    transition: .5s ease;
}

.cloth-list .add_to_cart_wrap a:hover {
    border-radius: 8px;
}
/** end of cloth listing **/


/** create cloth form styles **/
#cloth_creation_form label {
    display: block;
    margin-top: 16px;
}


#create_cloth_form input {
    width: 100%;
}

#cloth_creation_form input[type='submit']{

    margin-top: 13px;
    width: fit-content;
    padding: 10px 18px;
    background: #c42dff;
    color: #fff;

}

